# AutoX

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  README_en.md  README_zh_CN.md  Readme.md  bug  build.gradle  build.gradle.kts  ci_test.txt  dependencies.gradle.kts  gradle.properties  oldbuild.gradle  project-versions.json  settings.gradle  settings.gradle.kts  用户手册.docx
autojs/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  oldbuild.gradle  proguard-rules.pro
autojs/src/js-api/: .gitignore  README.md  autox-native.d.ts  build.mjs  gulpfile.mjs  package-lock.json  package.json  rollup.config.mjs  tsconfig.json  typedoc.json
autojs/src/js-api/src/axios/: index.ts
autojs/src/js-api/src/clip_manager/: index.ts
autojs/src/js-api/src/dialogs/: DialogFactory.ts  dialogs.d.ts  index.ts  options.ts
autojs/src/js-api/src/engines/: engines.d.ts  index.ts
autojs/src/js-api/src/java/: index.ts
autojs/src/js-api/src/media/: index.ts
autojs/src/js-api/src/toast/: index.ts
autojs/src/js-api/src/vue-ui/: README.md  autox-native.ui.d.ts  icons.ts  index.ts  modifierExtension.ts  modifierParse.ts  nativeRender.ts  nodeOps.ts  patchProp.ts  theme.ts  types.ts
autojs/src/js-api/srcipts/: install-types.mjs
autojs/src/main/: AndroidManifest.xml
autojs/src/main/CPP/: com_stardust_autojs_runtime_api_SevenZip.h  zips.cpp  zips.h
autojs/src/main/assets/: init.js
autojs/src/main/assets/modules/: __$base64__.js  __$crypto__.js  __$zip__.js  __app__.js  __automator__.js  __console__.js  __dialogs__.js  __files__.js  __floaty__.js  __globals__.js  __http__.js  __images__.js  __mlkit__.js  __paddle__.js  __process__.js  __threads__.js  __util__.js  __web__.js  __zips__.js  bluebird-promise.js  jvm-npm.js  lodash.js  rescale.js  vconsole.min.js
autojs/src/main/assets/web/: autox.sdk.v1.js
autojs/src/main/res-i18n/values-af/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-am/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ar/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-as/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ay/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-az/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-be/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-bg/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-bho/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-bm/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-bn/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-bs/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ca/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ceb/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ckb/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-co/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-cs/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-cy/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-da/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-de/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-doi/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-dv/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ee/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-el/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-en/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-eo/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-es/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-et/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-eu/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-fa/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-fi/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-fr/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-fy/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ga/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-gd/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-gl/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-gn/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-gu/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ha/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-haw/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-hi/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-hmn/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-hr/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ht/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-hu/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-hy/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-id/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ig/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ilo/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-is/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-it/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-iw/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ja/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-jw/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ka/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-kk/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-km/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-kn/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ko/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-kri/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ku/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ky/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-la/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-lb/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-lg/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-ln/: arrays.xml  strings.xml
autojs/src/main/res-i18n/values-lo/: arrays.xml  strings.xml
(+2555 files in other folders)
